# USD

./: BUILDING.md  CHANGELOG.md  CMakeLists.txt  README.md  VERSIONS.md  azure-pypi-pipeline.yml  updateSchemas.sh
pxr/: CMakeLists.txt  pxr.h.in  pxrConfig.cmake.in
pxr/base/arch/: assumptions.cpp  errno.cpp  fileSystem.h  stackTrace.cpp  systemInfo.cpp  systemInfo.h  timing.cpp
pxr/base/tf/: CMakeLists.txt  __init__.py  atomicOfstreamWrapper.h  debug.cpp  enum.cpp  errorMark.h  fileUtils.cpp  noticeRegistry.h  pathUtils.cpp  pch.h  py3Compat.h  pyInterpreter.cpp  pyModule.cpp  pyOptional.h  pyResultConversions.h  pyTracing.cpp  pyUtils.cpp  pyUtils.h  pyWrapContext.h  refPtrTracker.h  registryManager.cpp  registryManager.h  singleton.h  type.cpp  typeInfoMap.h  wrapDebug.cpp  wrapTestTfPython.cpp
pxr/base/ts/: CMakeLists.txt  eval.cpp  knot.cpp  knot.h  knotData.cpp  knotData.h  sample.cpp  spline.cpp  tsTest_TsEvaluator.cpp  wrapKnot.cpp  wrapSpline.cpp  wrapTypes.cpp
pxr/base/vt/: CMakeLists.txt  wrapArray.h  wrapValue.cpp
pxr/base/work/: CMakeLists.txt  detachedTask.h  dispatcher.cpp  dispatcher.h  loops.h  reduce.h  sort.h  threadLimits.cpp  threadLimits.h  withScopedParallelism.h
pxr/exec/: CMakeLists.txt
pxr/exec/ef/: CMakeLists.txt  dependencyCache.cpp  inputValueBlock.cpp  inputValueBlock.h  leafNode.cpp  leafNode.h  leafNodeCache.cpp  leafNodeCache.h  leafNodeIndexer.cpp  leafNodeIndexer.h  maskedSubExecutor.cpp  outputValueCache.cpp  outputValueCache.h  pageCache.cpp  pageCacheCommitRequest.cpp  pch.h  time.cpp  (+8 more)
pxr/usdValidation/: CMakeLists.txt
(+970 files in other folders)
